# plang-rust

./: .gitignore  Cargo.toml  lexer.l
examples/: simple.plang
grammar/: grammar.y  lexer.l
src/: interp.rs  main.rs  parse.rs
src/lib/: interp.rs  mod.rs  parse.rs
tests/: test_vm.rs
